--- a/heimy/css/style.css
+++ b/heimy/css/style.css
@@ -62,7 +62,7 @@ html {
 body {
   margin-left: var(--nav-width);
   margin-top: var(--nav-height);
-  /* background-image: linear-gradient(to right bottom, #d16ba5, #c777b9, #ba83ca, #aa8fd8, #9a9ae1, #8aa7ec, #79b3f4, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1); */  
+  /* background-image: linear-gradient(to right bottom, #d16ba5, #c777b9, #ba83ca, #aa8fd8, #9a9ae1, #8aa7ec, #79b3f4, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1); */
 }
   body.noscroll {
     overflow: hidden; }
@@ -2074,6 +2074,14 @@ input.input, .signup input[type=text],
   visibility: hidden; }
   .masonry__sizer {
     position: absolute; }
+
+.curatedby-top-banner {
+  position: -webkit-sticky;
+  position: sticky;
+  top: var(--gutter);
+  -o-object-position: top center;
+     object-position: top center; }
+
 
 .guide-cover-landscape__image {
   position: -webkit-sticky;
